topics collapsed to expand on click + fixed desktop topics style

--- a/web-client/app/styles/enhanced.scss
+++ b/web-client/app/styles/enhanced.scss
@@ -730,12 +730,14 @@ h1, h2, h3 {
   max-width: 100px;
   padding: 0;
   .card-list {
+    height: auto;
+    overflow: hidden;
     li {
       padding-left: 10px;
       border-left: 2px solid #aaa;
-      margin: 5px 0;
       border-right: none;
       padding-right: 0;
+      display: block;
       &:hover {
         border-color: #222;
         a { color: #222; }
